--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
     Hello world
     No this is my code
     this is my code
+    <h1>github</h1>
+    <p>
+        A cette occasion nous voudrions remercier profondément Mme jamaa el bouainibi qui nous a bien encadré techniquement pendant toute la durée de stage, sans hésiter à aucun moment de nous consacrer une part de son temps précieux, afin de nous aider considérablement dans la réalisation de stage, et qui nous a bien soutenu par ses conseils constructifs tout au long d’élaboration de ce projet.
+
+Et nous remercions infiniment nos Formateurs de l’ISTA croissant rouge rabat, pour leurs grands efforts qui nous ont aidé à apprendre des
+techniques et qui nous ont toujours encouragé durant toute la formation
+
+Enfin, nous adressons nos remerciements à tous nos collègues, nos amis, et nous remercions également tous ceux, qui ont contribué de près ou de loin à la réalisation de ce travail.
+A cette occasion nous voudrions remercier profondément Mme jamaa el bouainibi qui nous a bien encadré techniquement pendant toute la durée de stage, sans hésiter à aucun moment de nous consacrer une part de son temps précieux, afin de nous aider considérablement dans la réalisation de stage, et qui nous a bien soutenu par ses conseils constructifs tout au long d’élaboration de ce projet.
+
+Et nous remercions infiniment nos Formateurs de l’ISTA croissant rouge rabat, pour leurs grands efforts qui nous ont aidé à apprendre des
+techniques et qui nous ont toujours encouragé durant toute la formation
+
+Enfin, nous adressons nos remerciements à tous nos collègues, nos amis, et nous remercions également tous ceux, qui ont contribué de près ou de loin à la réalisation de ce travail.
+A cette occasion nous voudrions remercier profondément Mme jamaa el bouainibi qui nous a bien encadré techniquement pendant toute la durée de stage, sans hésiter à aucun moment de nous consacrer une part de son temps précieux, afin de nous aider considérablement dans la réalisation de stage, et qui nous a bien soutenu par ses conseils constructifs tout au long d’élaboration de ce projet.
+
+Et nous remercions infiniment nos Formateurs de l’ISTA croissant rouge rabat, pour leurs grands efforts qui nous ont aidé à apprendre des
+techniques et qui nous ont toujours encouragé durant toute la formation
+
+Enfin, nous adressons nos remerciements à tous nos collègues, nos amis, et nous remercions également tous ceux, qui ont contribué de près ou de loin à la réalisation de ce travail.
+
+    </p>
 </body>
 </html>
